Added language translation

--- a/apps/box/src/i18n/locales/en/translation.json
+++ b/apps/box/src/i18n/locales/en/translation.json
@@ -15,9 +15,14 @@
       "title": "Set Identity",
       "yourIdentity": "Your Identity",
       "password": "Password",
+      "signature": "Signature",
       "warning": "Make sure to safeguard this password and the chain you used, it's the key to decrypt your data from new devices",
       "passwordRisk": "I understand the risk of losing my password",
       "metamaskOpen": "I already opened Metamask app before clicking Sign",
+      "connectingWallet": "Connecting Wallet...",
+      "walletConnectionInProgress": "Wallet connection in progress, click to move back to the app",
+      "error": "Error",
+      "unableToSignWallet": "Unable to sign the wallet address!",
       "signWithMetamask": "Sign with MetaMask",
       "cancel": "Cancel",
       "signManually": "Sign Manually",
@@ -66,16 +71,28 @@
       "bloxPeerId": "Your Blox Peer ID",
       "enterBloxPeerId": "Enter Your Blox Peer ID",
       "setBloxName": "Set Blox name",
+      "hardDisk": "Hard Disk",
+      "bloxSetUp": "Blox Set Up",
       "formatDisk": "Format Disk",
+      "skip": "Skip",
+      "skipAuthorization": "Skip Authorization",
+      "skipDescription": "The Skip is only intended when you are instructed to do so by the support team. Please enter the code given to you:",
+      "cancel": "Cancel",
+      "invalidCode": "Invalid Code",
+      "invalidCodeMessage": "The code you entered is incorrect. Please contact support if you need assistance.",
+      "confirm": "Confirm",
+      "back": "Back",
       "setAuthorizer": "Set Authorizer",
       "next": "Next",
-      "back": "Back",
-      "skip": "Skip"
+      "bloxUnitPrefix": "Blox Unit",
+      "noBleDevicesConnected": "No BLE devices connected",
+      "unableToGetProperties": "Unable to get the blox properties!",
+      "bloxPeerIdInvalid": "Blox peerId is invalid!"
     },
     "setupComplete": {
       "completing": "Completing setup",
       "connectPhone": "Connect your phone to internet (wifi) to proceed now...",
-      "reachingBlox": "Reaching Blox #{number}...",
+      "reachingBlox": "Reaching Blox #{{number}}...",
       "greenLed": "Is you blox LED 'green' but you see this message?",
       "internetReminder": "Make sure your phone is connected to the internet and then try again",
       "lightBlueLed": "Is you blox flashing 'light-blue'? You probably entered wrong wifi password",
@@ -91,6 +108,31 @@
       "checkConnection": "Check Connection Again",
       "cyanFlashing": "If Blox is flashing 'Cyan', it probably means you have entered the wrong password for your wifi. Connect to 'FxBlox' Wifi again and retry.",
       "back": "Back",
-      "reconnectWifi": "Reconnect Blox to Wi-Fi"
+      "reconnectWifi": "Reconnect Blox to Wi-Fi",
+      "notConnectedToHotspot": "It seems you are no longer connected to Hotspot, check if FxBlox hotspot is still available, if not, blox is already connected to internet and you can go to Home",
+      "unableToInitialize": "Unable to initialize the fula network! error: {{error}} for fulaIsReady={{fulaIsReady}}"
+    },
+    "connectToExistingBlox": {
+        "title": "Bloxs in your network",
+        "selectBloxs": "Select bloxs you want to add",
+        "bloxUnitPrefix": "Blox unit",
+        "ip": "IP",
+        "peerId": "PEER ID",
+        "hardwareId": "HARDWARE ID",
+        "authorized": "Authorized",
+        "notAuthorized": "Not Authorized",
+        "checking": "Checking...",
+        "alreadyExist": "Already exist",
+        "addSelectedBloxs": "Add selected blox(s)",
+        "generateAppPeerIdError": "ConnectToExistingBloxScreen:generateAppPeerId: "
+    },
+    "checkConnection": {
+      "verifyingConnectionWith": "Verifying connection with {{ssid}}",
+      "successfullyConnected": "Successfully connected to {{ssid}}.",
+      "verifyingConnection": "Verifying connection...",
+      "couldntConnect": "Couldn't connect with {{ssid}}.",
+      "couldntConnectTryAgain": "Couldn't connect with {{ssid}}. Please try again.",
+      "connectingWith": "Connecting with {{ssid}}...",
+      "allDone": "All done\nYour device is connected with success!"
     }
   }
