added note to connect manually to wifi for ios
ios does not support automatic scanning for wifi

--- a/apps/box/src/i18n/locales/en/translation.json
+++ b/apps/box/src/i18n/locales/en/translation.json
@@ -60,6 +60,7 @@
       "enterPasswordFor": "Enter Password for",
       "searching": "Searching Wi-Fi Network",
       "selectNetwork": "Select Wi-Fi Network",
+      "noNetworksFound": "We could not find the available WiFi, please use the button to manually enter the WiFi information.",
       "back": "Back",
       "next": "Next"
     },
