added chinese to home page

--- a/apps/box/src/i18n/locales/en/translation.json
+++ b/apps/box/src/i18n/locales/en/translation.json
@@ -142,6 +142,46 @@
       "connectingWith": "Connecting with {{ssid}}...",
       "allDone": "All done\nYour device is connected with success!"
     },
+    "earningCard": {
+      "title": "Rewards",
+      "totalInWallet": "Total {{tokenSymbol}} in Wallet",
+      "claimableRewards": "Claimable Rewards",
+      "miningRewards": "Mining Rewards",
+      "storageRewards": "Storage Rewards",
+      "lastClaimed": "Last Claimed",
+      "claimRewards": "Claim Rewards",
+      "claiming": "Claiming...",
+      "errorLoadingBalance": "Error loading balance",
+      "errorLoadingRewards": "Error loading rewards",
+      "walletConnected": "Wallet Connected",
+      "walletConnectedMessage": "MetaMask wallet connected successfully",
+      "walletConnectionFailed": "Wallet Connection Failed",
+      "walletConnectionFailedMessage": "Failed to connect wallet",
+      "rewardsClaimed": "Rewards Claimed",
+      "rewardsClaimedMessage": "Successfully claimed {{amount}} tokens",
+      "claimFailed": "Claim Failed",
+      "claimFailedMessage": "Failed to claim tokens"
+    },
+    "connectedDevicesCard": {
+      "title": "Connected Devices",
+      "capacity": "Capacity",
+      "storedFiles": "Stored Files",
+      "otherData": "Other Data",
+      "used": "Used",
+      "free": "Free",
+      "status": "Status",
+      "ejectDevice": "Eject Device",
+      "noConnectedDevices": "No connected devices",
+      "deviceActions": "Device Actions",
+      "formatWarning": "Your blox turns purple for 2 minutes and then reboots automatically. Please do not disturb the format process",
+      "format": "Format",
+      "formatAllPartitions": "Format All Blox Partitions!",
+      "formatConfirmation": "Are you sure want to format all connected external blox partitions?",
+      "yes": "Yes",
+      "no": "No",
+      "requestSent": "Request Sent",
+      "partitionRequestMessage": "The partition request is sent and blox LED turns purple. Please wait 5 minutes as your blox restarts after partitioning"
+    },
     "pools": {
       "contractNotReady": "Contract Not Ready",
       "connectWalletMessage": "Please connect your wallet and wait for contract initialization",
