--- a/apps/box/src/i18n/locales/zh/translation.json
+++ b/apps/box/src/i18n/locales/zh/translation.json
@@ -142,6 +142,46 @@
     "connectingWith": "正在连接 {{ssid}}...",
     "allDone": "全部完成\n您的设备已成功连接！"
   },
+  "earningCard": {
+    "title": "奖励",
+    "totalInWallet": "钱包中总计 {{tokenSymbol}}",
+    "claimableRewards": "可领取奖励",
+    "miningRewards": "挖矿奖励",
+    "storageRewards": "存储奖励",
+    "lastClaimed": "上次领取",
+    "claimRewards": "领取奖励",
+    "claiming": "正在领取...",
+    "errorLoadingBalance": "加载余额时出错",
+    "errorLoadingRewards": "加载奖励时出错",
+    "walletConnected": "钱包已连接",
+    "walletConnectedMessage": "MetaMask 钱包连接成功",
+    "walletConnectionFailed": "钱包连接失败",
+    "walletConnectionFailedMessage": "连接钱包失败",
+    "rewardsClaimed": "奖励已领取",
+    "rewardsClaimedMessage": "成功领取 {{amount}} 代币",
+    "claimFailed": "领取失败",
+    "claimFailedMessage": "领取代币失败"
+  },
+  "connectedDevicesCard": {
+    "title": "已连接设备",
+    "capacity": "容量",
+    "storedFiles": "存储文件",
+    "otherData": "其他数据",
+    "used": "已使用",
+    "free": "可用",
+    "status": "状态",
+    "ejectDevice": "弹出设备",
+    "noConnectedDevices": "无已连接设备",
+    "deviceActions": "设备操作",
+    "formatWarning": "您的 blox 会变为紫色 2 分钟，然后自动重启。请不要打扰格式化过程",
+    "format": "格式化",
+    "formatAllPartitions": "格式化所有 Blox 分区！",
+    "formatConfirmation": "您确定要格式化所有连接的外部 blox 分区吗？",
+    "yes": "是",
+    "no": "否",
+    "requestSent": "请求已发送",
+    "partitionRequestMessage": "分区请求已发送，blox LED 变为紫色。请等待 5 分钟，因为您的 blox 在分区后会重启"
+  },
   "pools": {
     "contractNotReady": "合约未就绪",
     "connectWalletMessage": "请连接您的钱包并等待合约初始化",
