added blox name to pages and changed blocx selection

--- a/apps/box/src/i18n/locales/en/translation.json
+++ b/apps/box/src/i18n/locales/en/translation.json
@@ -200,5 +200,11 @@
       "insufficientFundsMessage": "You don't have enough funds to complete this transaction",
       "networkError": "Network Error",
       "networkErrorMessage": "Network connection issue. Please check your connection and try again."
+    },
+    "currentBloxIndicator": {
+      "noBloxSelected": "No Blox Selected",
+      "connected": "Connected",
+      "checking": "Checking",
+      "disconnected": "Disconnected"
     }
   }
