added sign manually with account and signature

--- a/apps/box/src/i18n/locales/en/translation.json
+++ b/apps/box/src/i18n/locales/en/translation.json
@@ -16,6 +16,7 @@
       "yourIdentity": "Your Identity",
       "password": "Password",
       "signature": "Signature",
+      "walletAddress": "Wallet Address",
       "warning": "Make sure to safeguard this password and the chain you used, it's the key to decrypt your data from new devices",
       "passwordRisk": "I understand the risk of losing my password",
       "metamaskOpen": "I already opened Metamask app before clicking Sign",
@@ -26,6 +27,7 @@
       "signWithMetamask": "Sign with MetaMask",
       "cancel": "Cancel",
       "signManually": "Sign Manually",
+      "getSignatureManually": "Get Signature Manually",
       "submit": "Submit",
       "connectToBlox": "Connect to Blox",
       "reconnectExisting": "Reconnect to existing blox",
