--- a/apps/box/src/i18n/locales/zh/translation.json
+++ b/apps/box/src/i18n/locales/zh/translation.json
@@ -16,6 +16,7 @@
     "yourIdentity": "您的身份",
     "password": "密码",
     "signature": "签名",
+    "walletAddress": "钱包地址",
     "warning": "确保保护好此密码和您使用的链，它是从新设备解密数据的关键",
     "passwordRisk": "我了解丢失密码的风险",
     "metamaskOpen": "点击签名前我已经打开了 Metamask 应用",
@@ -26,6 +27,7 @@
     "signWithMetamask": "使用 MetaMask 签名",
     "cancel": "取消",
     "signManually": "手动签名",
+    "getSignatureManually": "手动获取签名",
     "submit": "提交",
     "connectToBlox": "连接到 Blox",
     "reconnectExisting": "重新连接到现有 blox",
