--- a/apps/box/src/i18n/locales/zh/translation.json
+++ b/apps/box/src/i18n/locales/zh/translation.json
@@ -33,7 +33,7 @@
     "reconnectExisting": "重新连接到现有 blox",
     "bluetoothCommands": "蓝牙命令",
     "skipManualSetup": "跳到手动设置",
-    "existingIdentity": "发现现有身份",
+    "existingIdentity": "生成的身份",
     "continueWithExisting": "继续",
     "clearCachedData": "重置身份",
     "cachedDataCleared": "身份已成功重置"
