Added blox manager, made switching and status check better

--- a/apps/box/src/i18n/locales/en/translation.json
+++ b/apps/box/src/i18n/locales/en/translation.json
@@ -229,6 +229,7 @@
       "noBloxSelected": "No Blox Selected",
       "connected": "Connected",
       "checking": "Checking",
+      "switching": "Switching",
       "disconnected": "Disconnected"
     },
     "bleDeviceSelection": {
